ya know, basic updates, speed optimization, readibilty, etcc.

--- a/t/home.html
+++ b/t/home.html
@@ -35,7 +35,7 @@
 <div style = "display: inline-flex;"><p>https://replaccountapi.amoghthecool.repl.co/@</p><input placeholder="Username" id = "i"> </input></div><button id = "go" onclick = "window.location.href = '/@'+document.getElementById('i').value.replace('@', '')">Go!</button>
 <p>Or, you can view the <a href = "/leaderboard">leaderboard for all time</a>.</p>
 
-<h1 id = "poopyface">Click <a href = "/module_src">here</a> for the source code for the module I made to get a repl-ers data.</h1>
+<h1 id = "downAnchor">Click <a href = "/module_src">here</a> for the source code for the module I made to get a repl-ers data.</h1>
 <script>
-  window.location.href = "#poopyface"
+  window.location.href = "#downAnchor"
 </script>
