--- a/t/account.html
+++ b/t/account.html
@@ -9,6 +9,11 @@
     text-align: center;
   }
 </style>
+<head>
+<title id = 'tit'>@{{ uname }}</title>
+<link rel = 'shortcut icon' href = "{{ pfp }}"/>
+</head>
+<body>
 <h1>Their name is {{ name }}</h1>
 <h1>They have {{ cycles }} cycles.</h1>
 <h1>Their bio is: "{{ bio }}".</h1>
@@ -19,3 +24,4 @@
 <h1>Their top langs are {{ toplangs }}.</h1>
 <h1>Their repls are {{ repls }}.</h1>
 <h1>Find them on Replit <a href = "https://replit.com/@{{ uname }}">here</a></h1>
+</html>
